# SWBF2-Classic-Hack

./: .gitignore  CMakeLists.txt  README.md  SWBF2ClassicInternalHax.sln
SWBF2ClassicInternalHax/: SWBF2ClassicInternalHax.vcxproj  SWBF2ClassicInternalHax.vcxproj.filters
SWBF2ClassicInternalHax/src/: camera.h  character.h  context.h  fonts.h  functions.h  hack.cpp  hack.h  main.cpp  structs.h
SWBF2ClassicInternalHax/src/shared/gui/: gui.cpp  gui.h
SWBF2ClassicInternalHax/src/shared/gui/menu/: menu.h  menuOptions.h
SWBF2ClassicInternalHax/src/shared/hooks/: hooks.cpp  hooks.h
SWBF2ClassicInternalHax/src/shared/structs/: matrix.h  vec.h
SWBF2ClassicInternalHax/src/shared/utils/: mathUtils.h  utils.h
